@@ -168,11 +168,14 @@ ndo
 - rehuff - http://wiki.xiph.org/Rehuff
 - tidy-html5 4.9.26-191-gb4efe74 - http://www.paehl.com/open_source/?HTML_Tidy_for_HTML5
 - TruePNG 0.6.2.0 - http://x128.ho.ua/pngutils.html
+- UPX 3.91 - http://upx.sourceforge.net
 - ZLib 1.2.8 - http://www.zlib.net
 - zRecompress 2.12 - http://nikkhokkho.sourceforge.net/static.php?page=zRecompress
 
 
 XXXXX - YYYYYYY
+- Added UPX to the EXE/DLL tool chain (guindos98, necros).
+- Added INI setting bEXEEnableUPX=false to enable UPX EXE compression. For instance bEXEEnableUPX=true will enable UPX processing (guindos98, necros).
 - Added INI setting LeanifyIterations=-1 to specify desired Leanify iterations independantly of the compression level. For instance LeanifyIterations=128 will instruct Leanify to always use 128 iterations (necros).
 - Updated pngquant to 2.5.2.
 - Updated TruePNG to 0.6.2.0.
